[package]
name = "webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
webrtc = "0.4.0"
anyhow = "1.0.13"
lazy_static = "1.4.0"
hyper = { version = "0.13.8", features = ["full"] }
base64 = "0.13.0"